# week3-llamaindex-crewai-agents

./: .gitignore  1_llamaindex_simple_agent.py  2_llamaindex_simple_agent_memory.py  3_llamaindex_simple_agent_memory_restore.py  4_llamaindex_research_workflow_multi_agent.py  5_crewai_simple_multi_agent.py  6_crewai_customersupport_multi_agent.py  7_crewai_simple_agent_pdf_parsing.py  7_simple_crewai_agent_pdf_parsing.py  8_crewai_agent_to_find_invoice_contract_descrepencies.py  Homework.txt  LICENSE  LLMs.txt  README.md  agent_state.json  agent_state_old.json  customer_support_report.txt  example.env  final_output.txt  invoice_contract_reconciliation.json  pyproject.toml  references.txt  requirements.txt  task1_output.txt
db/: chroma.sqlite3
