[project]
name = "week3-llamaindex-crewai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arize-phoenix-otel>=0.12.1",
    "crewai[tools]>=0.157.0",
    "google-generativeai>=0.8.5",
    "llama-index>=0.13.1",
    "llama-index-llms-google-genai>=0.3.0",
    "openinference-instrumentation-crewai>=0.1.11",
    "openinference-instrumentation-llama-index>=4.3.4",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.10",
]
